<resources>
    <string name="app_name">Barcode Scanner</string>
    <string name="barcode_value">Barcode Value: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="subscription_expired">Subscription expired</string>
    <string name="scan_another">Scan another</string>
    <string name="patient_details">Patient Details</string>
    <string name="number">Number</string>
    <string name="household">Household</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dob">DoB</string>
    <string name="subscription_date">Subscription Date</string>
    <string name="subscriptiondate">SubscriptionDate</string>
    <string name="subscription_duration">Subscription Duration</string>
    <string name="subscriptiondurn">SubscriptionDurn</string>
    <string name="barcode_identified_nbut_member_not_in_database">Barcode identified, \nbut member not in database</string>
    <string name="quicker_update_adds_the_members_who_have_a_subscription_starting_since_the_last_time_this_device_was_updated">Quicker update: adds the members who have a subscription starting since the last time this device was updated.</string>
    <string name="fetch_all_patient_records_takes_a_few_minutes">Fetch all patient records. Takes a few minutes.</string>
    <string name="full_sync">Full Sync</string>
    <string name="update_sync">Update Sync</string>
    <string name="cancel_updating">Cancel update</string>
</resources>