<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/barcode_found_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowResult">

    <include
        android:id="@+id/include3"
        layout="@layout/top_bar" />

    <ImageView
        android:id="@+id/patient_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_hooray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include3"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_hooray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/patient_details"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/patient_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/patient_number_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/tv_hooray" />

    <TextView
        android:id="@+id/patient_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="Number"
        app:layout_constraintStart_toEndOf="@+id/patient_number_key"
        app:layout_constraintTop_toBottomOf="@+id/tv_hooray" />

    <TextView
        android:id="@+id/HouseholdId_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Household"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/patient_number" />

    <TextView
        android:id="@+id/HouseholdId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/household"
        app:layout_constraintStart_toEndOf="@+id/HouseholdId_key"
        app:layout_constraintTop_toBottomOf="@+id/patient_number" />

    <TextView
        android:id="@+id/MemberGender_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/HouseholdId_key" />

    <TextView
        android:id="@+id/MemberGenderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="Gender"
        app:layout_constraintStart_toEndOf="@+id/MemberGender_key"
        app:layout_constraintTop_toBottomOf="@+id/HouseholdId_key" />


    <TextView
        android:id="@+id/MemberDateOfBirth_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_of_birth"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/MemberGender_key" />

    <TextView
        android:id="@+id/MemberDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/dob"
        app:layout_constraintStart_toEndOf="@+id/MemberDateOfBirth_key"
        app:layout_constraintTop_toBottomOf="@+id/MemberGenderId" />

    <TextView
        android:id="@+id/CurrentSubscriptionDate_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subscription_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/MemberDateOfBirth_key" />

    <TextView
        android:id="@+id/CurrentSubscriptionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/subscriptiondate"
        app:layout_constraintStart_toEndOf="@+id/CurrentSubscriptionDate_key"
        app:layout_constraintTop_toBottomOf="@+id/MemberDateOfBirth" />

    <TextView
        android:id="@+id/SubscriptionDuration_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subscription_duration"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/CurrentSubscriptionDate_key" />


    <TextView
        android:id="@+id/SubscriptionDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/subscriptiondurn"
        app:layout_constraintStart_toEndOf="@+id/SubscriptionDuration_key"
        app:layout_constraintTop_toBottomOf="@+id/CurrentSubscriptionDate" />

    <TextView
        android:id="@+id/SubscriptionExpired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subscription_expired"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/SubscriptionDuration_key" />


    <TextView
        android:id="@+id/NotInDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/barcode_identified_nbut_member_not_in_database"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_hooray"
        app:layout_constraintTop_toBottomOf="@+id/SubscriptionDuration_key" />

    <Button
        android:id="@+id/bt_scan_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/scan_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>