<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/top_bar" />

    <Button
        android:id="@+id/displayData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/full_sync"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_sync"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/displayData"
        app:layout_constraintTop_toBottomOf="@+id/displayData" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/displayData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updatedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/cancelUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cancel_updating"
        app:layout_constraintTop_toBottomOf="@id/updatedText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="8sp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/fetch_all_patient_records_takes_a_few_minutes"
        app:layout_constraintBottom_toBottomOf="@+id/displayData"
        app:layout_constraintStart_toEndOf="@+id/displayData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/displayData" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/quicker_update_adds_the_members_who_have_a_subscription_starting_since_the_last_time_this_device_was_updated"
        app:layout_constraintBottom_toBottomOf="@+id/updateSync"
        app:layout_constraintStart_toEndOf="@+id/updateSync"
        app:layout_constraintTop_toTopOf="@+id/updateSync"
        app:layout_constraintEnd_toEndOf="parent"
 />

</androidx.constraintlayout.widget.ConstraintLayout>